application/brennoflavio/nitter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
  namespace: nitter
spec:
  selector:
    app: nitter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
