application/brennoflavio/nitter/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter-valkey
  namespace: nitter
spec:
  selector:
    app: nitter-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
