application/brennoflavio/nitter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter
  namespace: nitter
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  rules:
    - host: nitter.home.brennoflavio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nitter
                port:
                  number: 8080
  tls:
    - hosts:
        - nitter.home.brennoflavio.com.br
      secretName: nitter-tls
